<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/all_roundeddarkshape"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/all_roundedlightshape"
                android:gravity="center"
                android:hint="@string/dialog_edit_group_text_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="ButtonStyle">

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/all_iconstate"
                android:stateListAnimator="@null"
                android:text="@string/dialog_edit_group_button_save"
                android:textColor="@color/custom1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/all_iconstate"
                android:stateListAnimator="@null"
                android:text="@string/dialog_edit_group_button_cancel"
                android:textColor="@color/custom7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_remove"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/all_iconstate"
                android:stateListAnimator="@null"
                android:text="@string/dialog_edit_group_button_remove"
                android:textColor="@color/custom10"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>