<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom12"
    tools:context=".ui.group.list.GroupListActivity">

    <LinearLayout
        android:id="@+id/layout_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom4"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:fontFamily="cursive"
            android:text="@string/activity_group_list_text_title"
            android:textColor="@color/custom1"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/activity_group_list_text_empty_list"
        android:textColor="@color/custom5"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_add_group"
        android:layout_below="@+id/layout_wrapper"
        tools:listitem="@layout/item_group" />

    <Button
        android:id="@+id/button_add_group"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/all_goldbutton"
        android:text="@string/activity_group_list_button_add"
        android:textColor="@color/custom3"
        android:textSize="20sp" />

</RelativeLayout>